tons of fixes on view and behavior on device inspector screen

--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N4k-nE-dcU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="N4k-nE-dcU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -887,7 +887,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="192.168.0.1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6C-zO-Erf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="192.168.0.1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H6C-zO-Erf">
                                 <rect key="frame" x="170" y="184" width="86" height="15"/>
                                 <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -942,20 +942,20 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FunctionName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bo-oN-XV7">
-                                                    <rect key="frame" x="8" y="16" width="117" height="16"/>
+                                                    <rect key="frame" x="16" y="16" width="117" height="16"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arguments " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KmI-qt-lIf">
-                                                    <rect key="frame" x="8" y="56" width="94" height="16"/>
+                                                    <rect key="frame" x="16" y="56" width="94" height="16"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4bI-NF-sOv">
                                                     <rect key="frame" x="539" y="50" width="53" height="29"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.60392156862745094" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                                     <state key="normal" title="  Call  ">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -965,7 +965,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                                     </connections>
                                                 </button>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hQx-IB-Eyj">
-                                                    <rect key="frame" x="110" y="49" width="421" height="30"/>
+                                                    <rect key="frame" x="118" y="49" width="413" height="30"/>
                                                     <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -983,7 +983,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                             <constraints>
                                                 <constraint firstItem="hQx-IB-Eyj" firstAttribute="centerY" secondItem="KmI-qt-lIf" secondAttribute="centerY" id="0f1-0H-0VP"/>
                                                 <constraint firstItem="4bI-NF-sOv" firstAttribute="centerY" secondItem="hQx-IB-Eyj" secondAttribute="centerY" id="3om-Jf-3BN"/>
-                                                <constraint firstAttribute="leadingMargin" secondItem="KmI-qt-lIf" secondAttribute="leading" id="5cw-8d-teO"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="KmI-qt-lIf" secondAttribute="leading" constant="-8" id="5cw-8d-teO"/>
                                                 <constraint firstItem="9bo-oN-XV7" firstAttribute="top" secondItem="uae-oZ-flr" secondAttribute="topMargin" constant="8" id="Ama-cy-wmV"/>
                                                 <constraint firstItem="KjT-No-4ck" firstAttribute="centerX" secondItem="4bI-NF-sOv" secondAttribute="centerX" id="BEQ-gS-B84"/>
                                                 <constraint firstItem="KmI-qt-lIf" firstAttribute="top" secondItem="9bo-oN-XV7" secondAttribute="bottom" constant="24" id="Dja-KM-SfP"/>
@@ -991,7 +991,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                                 <constraint firstItem="4bI-NF-sOv" firstAttribute="leading" secondItem="hQx-IB-Eyj" secondAttribute="trailing" constant="8" id="ZXW-Of-EOI"/>
                                                 <constraint firstItem="hQx-IB-Eyj" firstAttribute="leading" secondItem="KmI-qt-lIf" secondAttribute="trailing" constant="8" id="gIL-SL-3T0"/>
                                                 <constraint firstItem="4Op-mh-sFC" firstAttribute="centerY" secondItem="9bo-oN-XV7" secondAttribute="centerY" id="gsv-Gq-05V"/>
-                                                <constraint firstAttribute="leadingMargin" secondItem="9bo-oN-XV7" secondAttribute="leading" id="k78-Ez-qUc"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="9bo-oN-XV7" secondAttribute="leading" constant="-8" id="k78-Ez-qUc"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="4bI-NF-sOv" secondAttribute="trailing" id="wTv-sI-EBD"/>
                                                 <constraint firstItem="KjT-No-4ck" firstAttribute="centerY" secondItem="4bI-NF-sOv" secondAttribute="centerY" id="wfx-4X-92D"/>
                                             </constraints>
@@ -1014,20 +1014,20 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VariableName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFi-Cx-E1U" userLabel="Variable Name Label">
-                                                    <rect key="frame" x="8" y="16" width="111" height="16"/>
+                                                    <rect key="frame" x="16" y="16" width="111" height="16"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VariableType" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sap-BY-3yi" userLabel="Variable Type Label">
-                                                    <rect key="frame" x="8" y="56" width="103" height="16"/>
+                                                    <rect key="frame" x="16" y="56" width="103" height="16"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEh-ev-TRg">
                                                     <rect key="frame" x="527" y="50" width="65" height="29"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.60392156860000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
                                                     <state key="normal" title="  Read  ">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1049,8 +1049,8 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                             <constraints>
                                                 <constraint firstItem="dFi-Cx-E1U" firstAttribute="top" secondItem="otD-t8-UtI" secondAttribute="topMargin" constant="8" id="09L-Ng-1Wp"/>
                                                 <constraint firstItem="R6A-0h-3vA" firstAttribute="centerX" secondItem="NEh-ev-TRg" secondAttribute="centerX" id="B7c-Xm-c1s"/>
-                                                <constraint firstAttribute="leadingMargin" secondItem="dFi-Cx-E1U" secondAttribute="leading" id="M4a-c0-9H3"/>
-                                                <constraint firstAttribute="leadingMargin" secondItem="sap-BY-3yi" secondAttribute="leading" id="Xbz-Xl-hFZ"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="dFi-Cx-E1U" secondAttribute="leading" constant="-8" id="M4a-c0-9H3"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="sap-BY-3yi" secondAttribute="leading" constant="-8" id="Xbz-Xl-hFZ"/>
                                                 <constraint firstItem="sap-BY-3yi" firstAttribute="top" secondItem="dFi-Cx-E1U" secondAttribute="bottom" constant="24" id="eJK-5k-Rto"/>
                                                 <constraint firstItem="7cY-E6-uc5" firstAttribute="centerY" secondItem="dFi-Cx-E1U" secondAttribute="centerY" id="glC-1g-yDg"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="NEh-ev-TRg" secondAttribute="trailing" id="hv1-Zf-OZy"/>
@@ -1645,6 +1645,6 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
         <image name="sunflower" width="5" height="37"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="U3o-w4-uqe"/>
+        <segue reference="LYr-nL-dWE"/>
     </inferredMetricsTieBreakers>
 </document>
