--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -810,21 +810,6 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                     <constraint firstItem="7Mg-YU-3wz" firstAttribute="top" secondItem="Umo-LC-HMf" secondAttribute="top" constant="28" id="uR5-Ve-VOw"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgDeviceUnknown" translatesAutoresizingMaskIntoConstraints="NO" id="Mte-nW-hU6">
-                                <rect key="frame" x="568" y="66" width="24" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="9dq-fK-9gQ"/>
-                                    <constraint firstAttribute="height" constant="42" id="b37-oi-PfU"/>
-                                    <constraint firstAttribute="height" constant="130" id="mb4-rL-RjD"/>
-                                    <constraint firstAttribute="width" constant="70" id="rik-vw-VQh"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="mb4-rL-RjD"/>
-                                        <exclude reference="rik-vw-VQh"/>
-                                    </mask>
-                                </variation>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="c5c-IK-cUt">
                                 <rect key="frame" x="20" y="165" width="35" height="16"/>
                                 <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="12"/>
@@ -865,7 +850,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photon" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6x-Ka-4d8">
-                                <rect key="frame" x="20" y="93" width="47" height="15"/>
+                                <rect key="frame" x="46" y="93" width="47" height="15"/>
                                 <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -962,6 +947,12 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                     <constraint firstAttribute="height" constant="1" id="ngH-lY-OH6"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1f-Qk-EZe">
+                                <rect key="frame" x="46" y="72" width="534" height="17"/>
+                                <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="09/09/2016 03:02:01AM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H0f-gV-kwC">
                                 <rect key="frame" x="100" y="132" width="480" height="15"/>
                                 <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="13"/>
@@ -1170,12 +1161,21 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 </prototypes>
                                 <sections/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1f-Qk-EZe">
-                                <rect key="frame" x="20" y="72" width="560" height="17"/>
-                                <fontDescription key="fontDescription" name="Gotham-Medium" family="Gotham" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgDevicePhoton" translatesAutoresizingMaskIntoConstraints="NO" id="Mte-nW-hU6">
+                                <rect key="frame" x="18" y="66" width="24" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="24" id="9dq-fK-9gQ"/>
+                                    <constraint firstAttribute="height" constant="42" id="b37-oi-PfU"/>
+                                    <constraint firstAttribute="height" constant="130" id="mb4-rL-RjD"/>
+                                    <constraint firstAttribute="width" constant="70" id="rik-vw-VQh"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="mb4-rL-RjD"/>
+                                        <exclude reference="rik-vw-VQh"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.60543263199999997" green="0.62999860559999998" blue="0.79396170379999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -1219,9 +1219,10 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                             <constraint firstItem="m6x-Ka-4d8" firstAttribute="top" secondItem="H1f-Qk-EZe" secondAttribute="bottom" constant="4" id="Kgh-JD-gDM"/>
                             <constraint firstItem="H6C-zO-Erf" firstAttribute="leading" secondItem="YuC-hX-n3m" secondAttribute="leading" id="LId-xT-5Fu"/>
                             <constraint firstItem="YuC-hX-n3m" firstAttribute="leading" secondItem="iBI-ve-vxL" secondAttribute="leading" id="LMs-1Q-dif"/>
+                            <constraint firstItem="H1f-Qk-EZe" firstAttribute="leading" secondItem="Mte-nW-hU6" secondAttribute="trailing" constant="4" id="MWh-jr-T1M"/>
                             <constraint firstItem="TOw-AS-l5U" firstAttribute="leading" secondItem="aV9-7l-p4f" secondAttribute="trailing" constant="216" id="Mg9-Yh-d1l"/>
                             <constraint firstItem="Agj-8M-8Pe" firstAttribute="top" secondItem="jQt-Kv-4DB" secondAttribute="bottom" constant="4" id="Mia-6m-8kr"/>
-                            <constraint firstItem="H1f-Qk-EZe" firstAttribute="leading" secondItem="ajO-tY-e4O" secondAttribute="leadingMargin" id="Odc-Ls-Tsi"/>
+                            <constraint firstItem="H1f-Qk-EZe" firstAttribute="leading" secondItem="ajO-tY-e4O" secondAttribute="leadingMargin" constant="40" id="Odc-Ls-Tsi"/>
                             <constraint firstItem="8Zr-np-68A" firstAttribute="centerY" secondItem="tLd-8e-H9n" secondAttribute="centerY" id="Og8-lQ-RwB"/>
                             <constraint firstItem="iBI-ve-vxL" firstAttribute="leading" secondItem="H0f-gV-kwC" secondAttribute="leading" id="OqW-E8-oLF"/>
                             <constraint firstAttribute="leadingMargin" secondItem="Mte-nW-hU6" secondAttribute="leading" constant="8" id="PZR-Px-awK"/>
@@ -1235,6 +1236,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                             <constraint firstItem="8Km-iq-M9K" firstAttribute="top" secondItem="LaH-eW-MIB" secondAttribute="bottom" constant="28" id="VNW-Lj-AkQ"/>
                             <constraint firstItem="0wE-hR-B91" firstAttribute="leading" secondItem="bcg-dD-B2A" secondAttribute="leading" id="Vaq-K0-sgT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Umo-LC-HMf" secondAttribute="trailing" constant="-20" id="Vsh-12-bVk"/>
+                            <constraint firstItem="Mte-nW-hU6" firstAttribute="leading" secondItem="ajO-tY-e4O" secondAttribute="leadingMargin" constant="-2" id="WHm-gd-aDr"/>
                             <constraint firstItem="bcg-dD-B2A" firstAttribute="top" secondItem="c5c-IK-cUt" secondAttribute="bottom" constant="4" id="WMg-uC-hnt"/>
                             <constraint firstItem="yWN-E5-MQi" firstAttribute="leading" secondItem="Agj-8M-8Pe" secondAttribute="trailing" constant="68" id="XuZ-DS-I9j"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Mte-nW-hU6" secondAttribute="trailing" constant="-12" id="Y2k-du-4og"/>
@@ -1287,9 +1289,18 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 <exclude reference="8KZ-ZT-gtn"/>
                                 <exclude reference="Q3Z-1B-0eJ"/>
                                 <exclude reference="d47-Ke-Qpv"/>
+                                <exclude reference="CvM-IK-Gh6"/>
+                                <exclude reference="JG3-Mj-4cZ"/>
+                                <exclude reference="PZR-Px-awK"/>
+                                <exclude reference="Y2k-du-4og"/>
+                                <exclude reference="a1f-3u-H44"/>
+                                <exclude reference="kfe-p4-ot3"/>
+                                <exclude reference="mx5-nY-fpC"/>
+                                <exclude reference="sEM-yB-bGx"/>
                                 <exclude reference="1cd-0f-9cw"/>
                                 <exclude reference="7yY-Mg-dJl"/>
                                 <exclude reference="Jgh-q3-1Qh"/>
+                                <exclude reference="Odc-Ls-Tsi"/>
                                 <exclude reference="w6I-OQ-HNe"/>
                                 <exclude reference="9L2-Ax-adf"/>
                                 <exclude reference="Ths-tJ-DuS"/>
@@ -1311,13 +1322,6 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 <exclude reference="Sfs-qx-j7N"/>
                                 <exclude reference="VNW-Lj-AkQ"/>
                                 <exclude reference="hpE-5c-bWb"/>
-                                <exclude reference="CvM-IK-Gh6"/>
-                                <exclude reference="JG3-Mj-4cZ"/>
-                                <exclude reference="PZR-Px-awK"/>
-                                <exclude reference="a1f-3u-H44"/>
-                                <exclude reference="kfe-p4-ot3"/>
-                                <exclude reference="mx5-nY-fpC"/>
-                                <exclude reference="sEM-yB-bGx"/>
                                 <exclude reference="1c2-ib-kbY"/>
                                 <exclude reference="Jpz-Dv-s20"/>
                                 <exclude reference="cQI-9V-3bb"/>
@@ -1690,6 +1694,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
         <image name="imgCopyClipboard" width="128" height="128"/>
         <image name="imgDeviceFamily" width="424" height="383"/>
         <image name="imgDeviceInspector" width="64" height="64"/>
+        <image name="imgDevicePhoton" width="240" height="451"/>
         <image name="imgDeviceUnknown" width="200" height="376"/>
         <image name="imgGreenCircle" width="128" height="128"/>
         <image name="imgPencil" width="32" height="32"/>
